[gd_scene load_steps=2 format=3 uid="uid://ui_scene"]

[ext_resource type="Script" path="res://scripts/UI.gd" id="1"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 250.0
offset_bottom = 200.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Character Stats"

[node name="StatsContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HealthLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "HP: 100/100"

[node name="ManaLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "MP: 50/50"

[node name="LevelLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Level: 1"

[node name="ExpLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "EXP: 0/100"

[node name="GoldLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Gold: 0"

[node name="AchievementPopup" type="Panel" parent="."]
offset_left = 300.0
offset_top = 50.0
offset_right = 700.0
offset_bottom = 150.0

[node name="Label" type="Label" parent="AchievementPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Achievement Unlocked!"
horizontal_alignment = 1
vertical_alignment = 1